@@ -1,1 +1,0 @@
-ADD_SUBDIRECTORY(opj_dec_server)
